# outback

zomes/: Cargo.toml
zomes/chat/: Cargo.toml
zomes/chat/src/: lib.rs
