[package]
name = "PANJACKS"
version = "0.1.0"
authors = ["mautamu <mautam@usa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chats"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "0.0.100-alpha.1"
# holochain_test_wasm_common = { version = "=0.0.1", path = "../../../wasm_common" }
serde = "1.0"
uuid = {version = "0.8.2", features = ["v4"]}
